--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,9 @@ version: '2'
 # Define services
 services:
   # App backend service
-  db:
-    image: mysql:5.7
+  moe-database:
+    container_name: moe-database
+    image: mysql/mysql-server:5.7
     ports:
       - "33061:3306"
     restart: always
@@ -15,36 +16,38 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
       MYSQL_ROOT_PASSWORD: admin
+      MYSQL_ROOT_HOST: '%'
     volumes:
       - ./docker/db:/docker-entrypoint-initdb.d
       - db-data:/var/lib/mysql
-    networks:
-      vpcbr:
-        ipv4_address: 172.50.0.30
+#    networks:
+#      vpcbr:
+#        ipv4_address: 172.50.0.30
   api-server:
-    # Configuration for building the docker image for the backend service
+    restart: always
     build:
       context: ./
       dockerfile: docker/app.dockerfile
-    ports:
-      - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
-    restart: always
+    working_dir: /app
+    volumes:
+      - ./:/app
+      - ~/.m2:/root/.m2
+    expose:
+      - "8080"
+    command: mvn clean spring-boot:run -Pdocker
     depends_on:
-      - db # This service depends on mysql. Start that first.
-    environment: # Pass environment variables to the service
-      SPRING_DATASOURCE_URL: jdbc:mysql://172.50.0.30:3306/moe_database?useSSL=false&serverTimezone=UTC
-      SPRING_DATASOURCE_USERNAME: admin
-      SPRING_DATASOURCE_PASSWORD: admin
-    networks: # Networks to join (Services on the same network can communicate with each other using their name)
-      vpcbr:
-        ipv4_address: 172.50.0.20
+      - moe-database
+  moe-nginx:
+    container_name: moe-nginx
+    image: nginx:1.13
+    restart: always
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./docker/nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - api-server
+
 volumes:
   db-data:
-
-networks:
-  vpcbr:
-    ipam:
-      config:
-        - subnet: 172.50.0.0/16
-          gateway: 172.50.0.1
-
