--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://moe-database:3306/moe_database?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/moe_database?useSSL=false&serverTimezone=UTC
 spring.datasource.username = admin
 spring.datasource.password = admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -12,5 +12,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-
 server.error.whitelabel.enabled=false
