--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<version>20190722</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
 	<profiles>
 		<profile>
